@@ -1,3 +1,12 @@
+2019-10-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	Pull in systime() and strftime() from the NetBSD awk.
+
+	* awk.1: Document the functions.
+	* run.c (bltin): Implement the functions.
+	* awk.h: Add defines for systime and strftime.
+	* lex.c: Add support for systime and strftime.
+
 2019-10-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Integrate features from different *BSD versions of awk.
